--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "kutt-action",
   "version": "1.0.0",
   "description": "GitHub Action to shorten URLs using Kutt",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "ncc build src/index.js -o dist",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build": "ncc build src/index.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -39,4 +39,4 @@
       "!src/__tests__/**"
     ]
   }
-} 
+}
