--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "build": "ncc build src/index.js -o dist"
+    "build": "ncc build src/index.js -o dist --minify --source-map"
   },
   "repository": {
     "type": "git",
