Add ESLint and Prettier configuration files, update package.json and package-lock.json for linting and formatting, and enhance build workflow to include linting and formatting steps. Introduce new scripts for linting and formatting, and add a curl script for API testing.

--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ inputs:
   reuse:
     description: 'Reuse'
     required: false
+    default: 'false'
   domain:
     description: 'Domain'
     required: false
@@ -34,5 +35,5 @@ outputs:
     description: 'The ID of the shortened URL'
 
 runs:
-  using: "node20"
-  main: "dist/index.js" 
+  using: 'node20'
+  main: 'dist/index.js'
