--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "build": "ncc build src/index.js -o dist"
+    "build": "ncc build src/index.js -o dist",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,12 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.7.0",
-    "jest-mock": "^29.7.0"
+    "jest-mock": "^29.7.0",
+    "prettier": "^3.2.5"
   },
   "jest": {
     "testEnvironment": "node",
